项目相关备注/k8s最新版本1.27/examples/application/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: nginx-deployment

spec:

  selector:

    matchLabels:

      app: nginx

  replicas: 2 # 告知 Deployment 运行 2 个与该模板匹配的 Pod

  template:

    metadata:

      labels:

        app: nginx

    spec:

      containers:

        - name: nginx

          image: nginx:1.14.2

          ports:

            - containerPort: 80
