项目相关备注/k8s最新版本1.27/examples/application/nfs-rbac.yaml
#vi nfs-deployment.yaml；创建nfs-client的授权
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nfs-client-provisioner
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nfs-client-provisioner
  template:
    metadata:
      labels:
        app: nfs-client-provisioner
    spec:
      serviceAccount: nfs-provisioner
      containers:
        -  name: nfs-client-provisioner
           image: 192.168.145.28:1603/kubesphere/nfs-client-provisioner:v3.1.0-k8s1.11
           volumeMounts:
             -  name: nfs-client-root
                mountPath:  /persistentvolumes
      volumes:
        - name: nfs-client-root
          nfs:
            server: 192.168.116.101
            path: /nfs/data
